--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.alura</groupId>
-	<artifactId>control-de-stock</artifactId>
+	<groupId>com.tebancardona</groupId>
+	<artifactId>stock-control</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Control de Stock</name>
 	<description>Proyecto para trabajar con bases de datos con JDBC</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 
 	<dependencies>
